refactor: remove unused Autowired annotations from PopulatorUtility and simplify stream operations